[package]
name = "dns-checker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
hickory-resolver = { version = "0.24", features = ["system-config", "tokio-runtime"] }
libc = "0.2.179"
log = "0.4.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.49.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
