[package]
name = "dns-checker"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
hickory-resolver = { version = "0.24", features = ["system-config", "tokio-runtime"] }
libc = { version = "0.2.179", optional = true }
log = "0.4.28"
pyo3 = { version = "0.27.2", optional = true, features = ["abi3-py310", "extension-module"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.49.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }

[features]
# Keep the GNU C backend (FFI) opt-in so default builds stay Rust-only.
gnu-c = ["libc"]
python = ["pyo3"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
